--- a/src/index.css
+++ b/src/index.css
@@ -46,7 +46,7 @@
 /* Root Styles */
 /* ------------------------ */
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Bebas Neue", sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
