--- a/src/index.css
+++ b/src/index.css
@@ -46,7 +46,7 @@
 /* Root Styles */
 /* ------------------------ */
 :root {
-  font-family: "Bebas Neue", sans-serif;
+  font-family: 'Liberation Serif';
   line-height: 1.5;
   font-weight: 400;
 
@@ -110,7 +110,7 @@ button {
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
-  font-family: inherit;
+  
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
